--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Hardhat plugin for managing released compilation artifacts",
   "scripts": {
+    "build": "tsup",
     "tsc": "tsc",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.ts",
@@ -23,6 +24,7 @@
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "tsup": "^8.2.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
   }
