--- a/package.json
+++ b/package.json
@@ -2,6 +2,23 @@
   "name": "hardhat-soko",
   "version": "0.0.1",
   "description": "Hardhat plugin for managing released compilation artifacts",
+  "author": "Loïc Vincent-Genod",
+  "license": "MIT",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "tsc": "tsc",
@@ -17,8 +34,6 @@
     "hardhat",
     "plugin"
   ],
-  "author": "Loïc Vincent-Genod",
-  "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "eslint": "^9.8.0",
