--- a/package.json
+++ b/package.json
@@ -2,13 +2,30 @@
   "name": "hardhat-soko",
   "version": "0.0.1",
   "description": "Hardhat plugin for managing released compilation artifacts",
+  "author": "Loïc Vincent-Genod",
+  "license": "MIT",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "tsc": "tsc",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "release": "npm run build && changeset publish"
   },
   "keywords": [
     "web3",
@@ -17,9 +34,8 @@
     "hardhat",
     "plugin"
   ],
-  "author": "Loïc Vincent-Genod",
-  "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "@eslint/js": "^9.8.0",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
