--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "prettier": "3.3.3",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "zod": "^3.23.8"
+  },
+  "peerDependencies": {
+    "hardhat": "^2.22.7"
   }
 }
