--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
     "typecheck": "tsc --noEmit",
+    "changeset": "changeset",
     "release": "npm run build && changeset publish"
   },
   "keywords": [
@@ -42,6 +43,10 @@
     "prettier": "3.3.3",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "zod": "^3.23.8"
+  },
+  "peerDependencies": {
+    "hardhat": "^2.22.7"
   }
 }
