--- a/package.json
+++ b/package.json
@@ -35,18 +35,21 @@
     "hardhat",
     "plugin"
   ],
+  "dependencies": {
+    "zod": "^3.23.8"
+  },
+  "peerDependencies": {
+    "hardhat": "^2.x"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
     "@eslint/js": "^9.8.0",
+    "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0",
-    "zod": "^3.23.8"
-  },
-  "peerDependencies": {
-    "hardhat": "^2.22.7"
+    "typescript-eslint": "^8.0.0"
   }
 }
