--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "plugin"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.624.0",
+    "@smithy/types": "^3.3.0",
     "zod": "^3.23.8"
   },
   "peerDependencies": {
