--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
+    },
+    "./scripts": {
+      "require": "./dist/scripts/exports.js",
+      "import": "./dist/scripts/exports.mjs",
+      "types": "./dist/scripts/exports.d.ts"
     }
   },
   "main": "./dist/index.js",
