--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.624.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@smithy/types": "^3.3.0",
     "zod": "^3.23.8"
   },
