--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "hardhat-soko",
   "version": "0.6.4",
-  "description": "Hardhat plugin for managing released compilation artifacts",
+  "description": "Hardhat plugin for managing compilation artifacts",
   "author": "Loïc Vincent-Genod",
+  "homepage": "https://github.com/VGLoic/hardhat-soko",
+  "bugs": {
+    "url": "https://github.com/VGLoic/hardhat-soko/issues"
+  },
   "license": "MIT",
   "files": [
     "dist",
