Add support for Forge compilation output (#31)
* handle project not found in typing

* handle forge compilation output

* remove unused util

* update text

* add changeset

* update README

* complete README and update package.json fields

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "hardhat-soko",
   "version": "0.6.4",
-  "description": "Hardhat plugin for managing released compilation artifacts",
+  "description": "Hardhat plugin for managing compilation artifacts",
   "author": "Loïc Vincent-Genod",
+  "homepage": "https://github.com/VGLoic/hardhat-soko",
+  "bugs": {
+    "url": "https://github.com/VGLoic/hardhat-soko/issues"
+  },
   "license": "MIT",
   "files": [
     "dist",
@@ -42,6 +46,8 @@
   ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.624.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/strings": "^5.7.0",
     "@smithy/types": "^3.3.0",
     "zod": "^3.23.8"
   },
